# instalam

./: README.md  pyproject.toml
instalam/: instalam.py
tests/: Simpsons_ranked_voting.xlsx  test_instalam.py
